--- a/src/demo_notebook.ipynb
+++ b/src/demo_notebook.ipynb
@@ -3,18 +3,30 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "544cf459",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os \n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = ''"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "ded58b7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/energy/amawi/miniconda3/envs/jax_cpu/lib/python3.8/site-packages/jax/experimental/optimizers.py:28: FutureWarning: jax.experimental.optimizers is deprecated, import jax.example_libraries.optimizers instead\n",
+      "  warnings.warn('jax.experimental.optimizers is deprecated, '\n",
+      "2021-11-24 14:46:33.080523: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n"
+     ]
+    }
+   ],
    "source": [
     "from nn_ansatz import *\n",
     "from jax.experimental.optimizers import adam\n",
@@ -26,83 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "326d91f4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "version \t\t 031121\n",
-      "seed \t\t 369\n",
-      "n_devices \t\t 1\n",
-      "save_every \t\t 2500\n",
-      "print_every \t\t 50\n",
-      "exp_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/031121/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10\n",
-      "events_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/031121/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/events\n",
-      "models_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/031121/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/models\n",
-      "opt_state_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/031121/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/models/opt_state\n",
-      "pre_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/pretrained/s64_p32_l2_det4_1lr-4_i0.pk\n",
-      "timing_dir \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/031121/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/events/timing\n",
-      "csv_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/031121/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/config6.csv\n",
-      "pk_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/experiments/LiSolidBCC/031121/junk/adam_1lr-4_1d-3_1nc-4_m512_s64_p32_l2_det4/run10/config6.pk\n",
-      "pbc \t\t True\n",
-      "basis \t\t [[1. 0. 0.]\n",
-      " [0. 1. 0.]\n",
-      " [0. 0. 1.]]\n",
-      "scale_cell \t\t 6.63\n",
-      "atoms_from_unit_cell \t\t True\n",
-      "r_atoms \t\t [[0.  0.  0. ]\n",
-      " [0.5 0.5 0.5]]\n",
-      "z_atoms \t\t [3. 3.]\n",
-      "n_el_atoms \t\t [3 3]\n",
-      "n_el \t\t 6\n",
-      "system \t\t LiSolidBCC\n",
-      "real_cut \t\t 6\n",
-      "reciprocal_cut \t\t 6\n",
-      "kappa \t\t 0.5\n",
-      "n_layers \t\t 2\n",
-      "n_sh \t\t 64\n",
-      "n_ph \t\t 32\n",
-      "n_det \t\t 4\n",
-      "scalar_inputs \t\t False\n",
-      "n_periodic_input \t\t 1\n",
-      "orbitals \t\t anisotropic\n",
-      "einsum \t\t False\n",
-      "opt \t\t adam\n",
-      "lr \t\t 0.0001\n",
-      "damping \t\t 0.001\n",
-      "norm_constraint \t\t 0.0001\n",
-      "n_it \t\t 30000\n",
-      "load_it \t\t 0\n",
-      "n_walkers \t\t 512\n",
-      "n_walkers_per_device \t\t 512\n",
-      "step_size \t\t 0.05\n",
-      "correlation_length \t\t 10\n",
-      "pre_lr \t\t 0.0001\n",
-      "n_pre_it \t\t 0\n",
-      "load_pretrain \t\t False\n",
-      "pretrain \t\t False\n"
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "output_type": "error",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at S.executeCodeCell (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:301742)",
+      "at S.execute (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:300732)",
+      "at S.start (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:296408)",
+      "at async t.CellExecutionQueue.executeQueuedCells (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:312326)",
+      "at async t.CellExecutionQueue.start (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:311862)"
      ]
     }
    ],
    "source": [
-    "cfg = setup(system='LiSolidBCC',\n",
+    "cfg = setup(system='HEG',\n",
     "                    n_pre_it=0,\n",
-    "                    n_walkers=512,\n",
+    "                    n_el=7,\n",
+    "                    n_walkers=64,\n",
     "                    n_layers=2,\n",
-    "                    n_sh=64,\n",
-    "                    step_size=0.05,\n",
-    "                    n_ph=32,\n",
-    "                    scalar_inputs=False,\n",
-    "                    orbitals='anisotropic',\n",
-    "                    n_periodic_input=1,\n",
-    "                    opt='adam',\n",
-    "                    # einsum=True,\n",
-    "                    n_det=4,\n",
-    "                    print_every=50,\n",
-    "                    save_every=2500,\n",
-    "                    lr=1e-4,\n",
+    "                    n_sh=32,\n",
+    "                    n_ph=8,\n",
+    "                    orbitals='real_plane_waves',\n",
     "                    n_it=30000)\n",
     "\n",
     "log = run_vmc(cfg)"
@@ -111,6 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2dfbb099",
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bce6230a",
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "26a62f66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "211beb47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,6 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "72df9660",
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "d256c394",
    "metadata": {},
    "outputs": [
     {
@@ -1052,6 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "71dbd600",
    "metadata": {},
    "outputs": [
     {
@@ -1090,6 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "c5570546",
    "metadata": {},
    "outputs": [
     {
@@ -1178,6 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "35a7404f",
    "metadata": {},
    "outputs": [
     {
@@ -1285,6 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "acb53920",
    "metadata": {},
    "outputs": [
     {
@@ -1353,6 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0dccdfa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,6 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "e089fd06",
    "metadata": {},
    "outputs": [
     {
@@ -1416,6 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "2dc2d25c",
    "metadata": {},
    "outputs": [
     {
@@ -1466,6 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "0bde948c",
    "metadata": {},
    "outputs": [
     {
@@ -1645,6 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a0b7bf20",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1668,7 +1645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
