--- a/src/debugger.ipynb
+++ b/src/debugger.ipynb
@@ -9,7 +9,36 @@
                 "%load_ext autoreload\n",
                 "%autoreload 2\n",
                 "import os \n",
-                "os.environ['CUDA_VISIBLE_DEVICES'] = '1'"
+                "os.environ['CUDA_VISIBLE_DEVICES'] = ''"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 8,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "(20, 7)\n"
+                    ]
+                }
+            ],
+            "source": [
+                "import numpy as jnp\n",
+                "\n",
+                "n_el = 7\n",
+                "def flatten(lol):\n",
+                "    return [x for lst in lol for x in lst]\n",
+                "\n",
+                "kpoints = jnp.random.uniform(0, 1, (21, 3))\n",
+                "inputs = jnp.random.uniform(0, 1, (n_el, 3))\n",
+                "iterator = iter(kpoints[1:, :])\n",
+                "rho_k = [[jnp.cos(inputs @ k1), jnp.sin(inputs @ k2)] for (k1, k2) in list(zip(iterator, iterator))]\n",
+                "rho_k = flatten(rho_k)\n",
+                "rho_k = jnp.array(rho_k)\n",
+                "print(rho_k.shape)\n"
             ]
         },
         {
@@ -1527,7 +1556,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.7.10"
+            "version": "3.8.0"
         },
         "orig_nbformat": 4
     },
