--- a/src/demo_notebook.ipynb
+++ b/src/demo_notebook.ipynb
@@ -23,7 +23,7 @@
      "text": [
       "/home/energy/amawi/miniconda3/envs/jax_cpu/lib/python3.8/site-packages/jax/experimental/optimizers.py:28: FutureWarning: jax.experimental.optimizers is deprecated, import jax.example_libraries.optimizers instead\n",
       "  warnings.warn('jax.experimental.optimizers is deprecated, '\n",
-      "2021-11-24 14:46:33.080523: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n"
+      "2021-11-25 11:47:33.347735: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n"
      ]
     }
    ],
@@ -34,6 +34,51 @@
     "from tqdm.notebook import trange\n",
     "from jax import pmap, vmap, grad\n",
     "from jax import numpy as jnp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bae62334",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = setup(system='HEG',\n",
+    "                    n_pre_it=0,\n",
+    "                    n_el=7,\n",
+    "                    n_walkers=64,\n",
+    "                    n_layers=2,\n",
+    "                    n_sh=32,\n",
+    "                    n_ph=8,\n",
+    "                    orbitals='real_plane_waves',\n",
+    "                    n_it=30000)\n",
+    "\n",
+    "mol = SystemAnsatz(**cfg)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83310cff",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "output_type": "error",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at S.executeCodeCell (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:301742)",
+      "at S.execute (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:300732)",
+      "at S.start (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:296408)",
+      "at async t.CellExecutionQueue.executeQueuedCells (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:312326)",
+      "at async t.CellExecutionQueue.start (/home/energy/amawi/.vscode-server/extensions/ms-toolsai.jupyter-2021.10.1101450599/out/client/extension.js:66:311862)"
+     ]
+    }
+   ],
+   "source": [
+    "cfg"
    ]
   },
   {
