--- a/src/scripts/debugging/ewalds/ewalds_tests.ipynb
+++ b/src/scripts/debugging/ewalds/ewalds_tests.ipynb
@@ -20,14 +20,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-14 14:37:31.870384: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.35-GCCcore-10.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.2.0/lib:/home/modules/software/GCCcore/10.2.0/lib64:/home/modules/software/GCCcore/10.2.0/lib\n"
+      "/home/energy/amawi/miniconda3/envs/jax_cpu/lib/python3.8/site-packages/jax/experimental/optimizers.py:28: FutureWarning: jax.experimental.optimizers is deprecated, import jax.example_libraries.optimizers instead\n",
+      "  warnings.warn('jax.experimental.optimizers is deprecated, '\n"
      ]
     }
    ],
@@ -54,15 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-14 14:37:55.242735: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.35-GCCcore-10.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.2.0/lib:/home/modules/software/GCCcore/10.2.0/lib64:/home/modules/software/GCCcore/10.2.0/lib\n",
-      "2021-12-14 14:37:55.242957: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n"
+      "2021-12-15 13:10:08.919936: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/cuDNN/8.2.2.26-CUDA-11.4.1/lib:/home/modules/software/CUDA/11.4.1/nvvm/lib64:/home/modules/software/CUDA/11.4.1/extras/CUPTI/lib64:/home/modules/software/CUDA/11.4.1/lib:/home/modules/software/binutils/2.35-GCCcore-10.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.2.0/lib:/home/modules/software/GCCcore/10.2.0/lib64:/home/modules/software/GCCcore/10.2.0/lib:/home/modules/software/CUDAcore/11.1.1/nvvm/lib64:/home/modules/software/CUDAcore/11.1.1/extras/CUPTI/lib64:/home/modules/software/CUDAcore/11.1.1/lib\n",
+      "2021-12-15 13:10:08.920027: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     }
    ],
@@ -80,7 +81,8 @@
     "                    orbitals='real_plane_waves',\n",
     "                    n_it=10)\n",
     "\n",
-    "mol, vwf, walkers, params, sampler, keys = initialise_system_wf_and_sampler(cfg, None)\n",
+    "load_params = '/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/dp_14_tests/kfac_1lr-3_1d-4_1nc-4_m2048_el14_s128_p32_l2_det1/run697846/models/i100000.pk'\n",
+    "mol, vwf, walkers, params, sampler, keys = initialise_system_wf_and_sampler(cfg, None, load_params=load_params)\n",
     "\n",
     "walkers = walkers.reshape(walkers.shape[1:])\n",
     "pe = create_potential_energy(mol)\n",
