new layer structure

--- a/src/scripts/debugging/ewalds/ewalds_tests.ipynb
+++ b/src/scripts/debugging/ewalds/ewalds_tests.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = ''\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,19 +22,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/energy/amawi/miniconda3/envs/jax_cpu/lib/python3.8/site-packages/jax/experimental/optimizers.py:28: FutureWarning: jax.experimental.optimizers is deprecated, import jax.example_libraries.optimizers instead\n",
-      "  warnings.warn('jax.experimental.optimizers is deprecated, '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/home/energy/amawi/projects/nn_ansatz/src')\n",
+    "# sys.path.append('/home/energy/amawi/projects/nn_ansatz/src')\n",
+    "sys.path.append('/home/amawi/projects/nn_ansatz/src')\n",
     "\n",
     "import jax\n",
     "import jax.random as rnd\n",
@@ -55,15 +47,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-12-15 13:10:08.919936: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/cuDNN/8.2.2.26-CUDA-11.4.1/lib:/home/modules/software/CUDA/11.4.1/nvvm/lib64:/home/modules/software/CUDA/11.4.1/extras/CUPTI/lib64:/home/modules/software/CUDA/11.4.1/lib:/home/modules/software/binutils/2.35-GCCcore-10.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.2.0/lib:/home/modules/software/GCCcore/10.2.0/lib64:/home/modules/software/GCCcore/10.2.0/lib:/home/modules/software/CUDAcore/11.1.1/nvvm/lib64:/home/modules/software/CUDAcore/11.1.1/extras/CUPTI/lib64:/home/modules/software/CUDAcore/11.1.1/lib\n",
-      "2021-12-15 13:10:08.920027: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n"
+      "version \t\t 151221\n",
+      "seed \t\t 369\n",
+      "n_devices \t\t 1\n",
+      "save_every \t\t 5000\n",
+      "print_every \t\t 1000\n",
+      "name \t\t 151221/junk\n",
+      "exp_dir \t\t /home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/HEG/151221/junk/kfac_1lr-3_1d-4_1nc-4_m16_el14_s128_p32_l2_det1/run727715\n",
+      "events_dir \t\t /home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/HEG/151221/junk/kfac_1lr-3_1d-4_1nc-4_m16_el14_s128_p32_l2_det1/run727715/events\n",
+      "models_dir \t\t /home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/HEG/151221/junk/kfac_1lr-3_1d-4_1nc-4_m16_el14_s128_p32_l2_det1/run727715/models\n",
+      "opt_state_dir \t\t /home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/HEG/151221/junk/kfac_1lr-3_1d-4_1nc-4_m16_el14_s128_p32_l2_det1/run727715/models/opt_state\n",
+      "pre_path \t\t /home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/HEG/pretrained/el14_s128_p32_l2_det1_1lr-4_i0_real_plane_waves_cos_4cos+4sin+19kpoints_dp1.0_111.pk\n",
+      "timing_dir \t\t /home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/HEG/151221/junk/kfac_1lr-3_1d-4_1nc-4_m16_el14_s128_p32_l2_det1/run727715/events/timing\n",
+      "csv_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/HEG/151221/junk/kfac_1lr-3_1d-4_1nc-4_m16_el14_s128_p32_l2_det1/run727715/config1.csv\n",
+      "pk_cfg_path \t\t /home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/HEG/151221/junk/kfac_1lr-3_1d-4_1nc-4_m16_el14_s128_p32_l2_det1/run727715/config1.pk\n",
+      "pbc \t\t True\n",
+      "basis \t\t [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "scale_cell \t\t 1.0\n",
+      "spin_polarized \t\t False\n",
+      "r_atoms \t\t None\n",
+      "z_atoms \t\t None\n",
+      "n_el \t\t 14\n",
+      "n_up \t\t 7\n",
+      "density_parameter \t\t 1.0\n",
+      "system \t\t HEG\n",
+      "real_cut \t\t 6\n",
+      "reciprocal_cut \t\t 6\n",
+      "kappa \t\t 0.5\n",
+      "simulation_cell \t\t (1, 1, 1)\n",
+      "atol \t\t 1e-05\n",
+      "n_layers \t\t 2\n",
+      "n_sh \t\t 128\n",
+      "n_ph \t\t 32\n",
+      "n_det \t\t 1\n",
+      "scalar_inputs \t\t False\n",
+      "orbitals \t\t real_plane_waves\n",
+      "einsum \t\t False\n",
+      "nonlinearity \t\t cos\n",
+      "input_activation_nonlinearity \t\t 4cos+4sin+19kpoints\n",
+      "jastrow \t\t True\n",
+      "opt \t\t kfac\n",
+      "lr \t\t 0.001\n",
+      "damping \t\t 0.0001\n",
+      "norm_constraint \t\t 0.0001\n",
+      "n_it \t\t 10\n",
+      "load_it \t\t 0\n",
+      "n_walkers \t\t 16\n",
+      "n_walkers_per_device \t\t 16\n",
+      "step_size \t\t 0.05\n",
+      "correlation_length \t\t 10\n",
+      "pre_lr \t\t 0.0001\n",
+      "n_pre_it \t\t 0\n",
+      "pretrain \t\t False\n",
+      "Cell: \n",
+      " basis: \n",
+      " [[3.88513 3.88513 3.88513]] \n",
+      " inv_basis: \n",
+      " [[0.25739166 0.25739166 0.25739166]] \n",
+      " scale_cell:  \n",
+      " 3.885129937885507 \n",
+      " reciprocal_basis: \n",
+      " [[1.6172394 0.        0.       ]\n",
+      " [0.        1.6172394 0.       ]\n",
+      " [0.        0.        1.6172394]] \n",
+      " kappa            = 0.50 \n",
+      " \n",
+      " volume           = 58.64 \n",
+      "\n",
+      "System: \n",
+      " n_atoms = 0 \n",
+      " n_up    = 7 \n",
+      " n_down  = 7 \n",
+      " n_el    = 14 \n",
+      "\n",
+      "Ansatz: \n",
+      " n_layers = 2 \n",
+      " n_det    = 1 \n",
+      " n_sh     = 128 \n",
+      " n_ph     = 32 \n",
+      "\n",
+      "creating wf\n",
+      "sampling no infs, this could take a while\n",
+      "end sampling no infs\n",
+      "kappa 0.250 || reciprocal_cut 1 || previous pe 100000000.0000000 || pe 0.0000982 || isclose False\n",
+      "kappa 0.250 || reciprocal_cut 2 || previous pe 0.0000982 || pe 0.0000982 || isclose True\n",
+      "kappa 0.250 || real_cut 1 || reciprocal_cut 2 || previous pe 100000000.0000000 || pe 76.9751282 || isclose False\n",
+      "kappa 0.250 || real_cut 2 || reciprocal_cut 2 || previous pe 76.9751282 || pe 80.7621841 || isclose False\n",
+      "kappa 0.250 || real_cut 3 || reciprocal_cut 2 || previous pe 80.7621841 || pe 80.8087006 || isclose False\n",
+      "kappa 0.250 || real_cut 4 || reciprocal_cut 2 || previous pe 80.8087006 || pe 80.8088150 || isclose False\n",
+      "kappa 0.250 || real_cut 5 || reciprocal_cut 2 || previous pe 80.8088150 || pe 80.8088150 || isclose False\n",
+      "kappa 0.250 || real_cut 6 || reciprocal_cut 2 || previous pe 80.8088150 || pe 80.8088150 || isclose False\n",
+      "kappa 0.250 || real_cut 7 || reciprocal_cut 2 || previous pe 80.8088150 || pe 80.8088074 || isclose False\n",
+      "kappa 0.750 || reciprocal_cut 1 || previous pe 100000000.0000000 || pe 1.4553819 || isclose False\n",
+      "kappa 0.750 || reciprocal_cut 2 || previous pe 1.4553819 || pe 1.4741192 || isclose False\n",
+      "kappa 0.750 || reciprocal_cut 3 || previous pe 1.4741192 || pe 1.4741468 || isclose False\n",
+      "kappa 0.750 || reciprocal_cut 4 || previous pe 1.4741468 || pe 1.4741468 || isclose True\n",
+      "kappa 0.750 || real_cut 1 || reciprocal_cut 4 || previous pe 100000000.0000000 || pe 8.6174135 || isclose False\n",
+      "kappa 0.750 || real_cut 2 || reciprocal_cut 4 || previous pe 8.6174135 || pe 8.6174183 || isclose False\n",
+      "kappa 0.750 || real_cut 3 || reciprocal_cut 4 || previous pe 8.6174183 || pe 8.6174183 || isclose True\n",
+      "Taking kappa 0.750, real cut 3, and reciprocal cut 4\n"
      ]
     }
    ],
@@ -76,25 +167,26 @@
     "                    density_parameter=1.,\n",
     "                    n_walkers=16,\n",
     "                    n_layers=2,\n",
-    "                    n_sh=32,\n",
-    "                    n_ph=8,\n",
+    "                    n_sh=128,\n",
+    "                    n_ph=32,\n",
+    "                    input_activation_nonlinearity='4cos+4sin+19kpoints',\n",
     "                    orbitals='real_plane_waves',\n",
     "                    n_it=10)\n",
     "\n",
-    "load_params = '/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/dp_14_tests/kfac_1lr-3_1d-4_1nc-4_m2048_el14_s128_p32_l2_det1/run697846/models/i100000.pk'\n",
+    "load_params = '/home/amawi/projects/nn_ansatz/src/scripts/debugging/ewalds/i100000.pk'\n",
     "mol, vwf, walkers, params, sampler, keys = initialise_system_wf_and_sampler(cfg, None, load_params=load_params)\n",
     "\n",
     "walkers = walkers.reshape(walkers.shape[1:])\n",
     "pe = create_potential_energy(mol)\n",
     "\n",
-    "pes = pe(walkers, mol.r_atoms, mol.z_atoms)\n",
+    "pes = pe(walkers, mol.r_atoms, mol.z_atoms) * 2. / 14.\n",
     "\n",
     "data = {'potential_energy': np.array(pes)}\n",
     "\n",
     "for i in range(14):\n",
-    "    data['x_%i'] = np.array(walkers[:, i, 0])\n",
-    "    data['y_%i'] = np.array(walkers[:, i, 1])\n",
-    "    data['z_%i'] = np.array(walkers[:, i, 2])\n",
+    "    data['x_%i' % i] = np.array(walkers[:, i, 0])\n",
+    "    data['y_%i' % i] = np.array(walkers[:, i, 1])\n",
+    "    data['z_%i' % i] = np.array(walkers[:, i, 2])\n",
     "\n",
     "df = pd.DataFrame.from_dict(data)\n",
     "\n",
@@ -970,7 +1062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.10"
   },
   "orig_nbformat": 2
  },
