--- a/src/exp/plotting.ipynb
+++ b/src/exp/plotting.ipynb
@@ -13,7 +13,8 @@
     "import os\n",
     "sys.path.append('..')\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] =''\n",
-    "import glob"
+    "import glob\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -25,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-15 11:15:16.159638: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.35-GCCcore-10.2.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.2.0/lib:/home/modules/software/GCCcore/10.2.0/lib64:/home/modules/software/GCCcore/10.2.0/lib\n",
+      "2021-12-23 18:01:40.631136: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/modules/software/binutils/2.36.1-GCCcore-10.3.0/lib:/home/modules/software/zlib/1.2.11-GCCcore-10.3.0/lib:/home/modules/software/GCCcore/10.3.0/lib64:/home/modules/software/GCCcore/10.3.0/lib\n",
       "/home/energy/amawi/miniconda3/envs/jax_cpu/lib/python3.8/site-packages/jax/experimental/optimizers.py:28: FutureWarning: jax.experimental.optimizers is deprecated, import jax.example_libraries.optimizers instead\n",
       "  warnings.warn('jax.experimental.optimizers is deprecated, '\n"
      ]
@@ -191,81 +192,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "\n",
-       "\n",
-       "\n",
-       "\n",
-       "\n",
-       "  <div class=\"bk-root\" id=\"65361a06-e5a1-4425-8016-c2d0e9f1fedf\" data-root-id=\"2275\"></div>\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": "(function(root) {\n  function embed_document(root) {\n    \n  const docs_json = {\"b0d689bb-0c84-432a-8b79-3afe19871bc5\":{\"defs\":[],\"roots\":{\"references\":[{\"attributes\":{\"below\":[{\"id\":\"2286\"}],\"center\":[{\"id\":\"2289\"},{\"id\":\"2293\"}],\"height\":400,\"left\":[{\"id\":\"2290\"}],\"renderers\":[{\"id\":\"2312\"},{\"id\":\"2318\"}],\"title\":{\"id\":\"2276\"},\"toolbar\":{\"id\":\"2301\"},\"width\":400,\"x_range\":{\"id\":\"2278\"},\"x_scale\":{\"id\":\"2282\"},\"y_range\":{\"id\":\"2280\"},\"y_scale\":{\"id\":\"2284\"}},\"id\":\"2275\",\"subtype\":\"Figure\",\"type\":\"Plot\"},{\"attributes\":{},\"id\":\"2421\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{\"data\":{\"xs\":[[3,3],[4,4],[4,4]],\"ys\":[[0.5696750807436602,0.5697084737149579],[0.5697154819264714,0.5697515190348323],[0.5697117340462904,0.5697484719855089]]},\"selected\":{\"id\":\"2426\"},\"selection_policy\":{\"id\":\"2425\"}},\"id\":\"2314\",\"type\":\"ColumnDataSource\"},{\"attributes\":{\"coordinates\":null,\"data_source\":{\"id\":\"2314\"},\"glyph\":{\"id\":\"2315\"},\"group\":null,\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"2317\"},\"nonselection_glyph\":{\"id\":\"2316\"},\"view\":{\"id\":\"2319\"}},\"id\":\"2318\",\"type\":\"GlyphRenderer\"},{\"attributes\":{\"bottom_units\":\"screen\",\"coordinates\":null,\"fill_alpha\":0.5,\"fill_color\":\"lightgrey\",\"group\":null,\"left_units\":\"screen\",\"level\":\"overlay\",\"line_alpha\":1.0,\"line_color\":\"black\",\"line_dash\":[4,4],\"line_width\":2,\"right_units\":\"screen\",\"syncable\":false,\"top_units\":\"screen\"},\"id\":\"2300\",\"type\":\"BoxAnnotation\"},{\"attributes\":{\"line_alpha\":{\"value\":0.2},\"line_color\":{\"value\":\"#1b9e77\"},\"xs\":{\"field\":\"xs\"},\"ys\":{\"field\":\"ys\"}},\"id\":\"2317\",\"type\":\"MultiLine\"},{\"attributes\":{},\"id\":\"2422\",\"type\":\"AllLabels\"},{\"attributes\":{\"coordinates\":null,\"group\":null,\"text\":\"denisty parameter sweep\"},\"id\":\"2276\",\"type\":\"Title\"},{\"attributes\":{\"line_color\":{\"value\":\"#1b9e77\"},\"xs\":{\"field\":\"xs\"},\"ys\":{\"field\":\"ys\"}},\"id\":\"2315\",\"type\":\"MultiLine\"},{\"attributes\":{\"data\":{\"x\":[3,4,4],\"y\":{\"__ndarray__\":\"AAAAQOo64j8AAADAQTviPwAAAKA6O+I/\",\"dtype\":\"float64\",\"order\":\"little\",\"shape\":[3]}},\"selected\":{\"id\":\"2424\"},\"selection_policy\":{\"id\":\"2423\"}},\"id\":\"2308\",\"type\":\"ColumnDataSource\"},{\"attributes\":{\"source\":{\"id\":\"2314\"}},\"id\":\"2319\",\"type\":\"CDSView\"},{\"attributes\":{\"line_alpha\":{\"value\":0.1},\"line_color\":{\"value\":\"#1b9e77\"},\"xs\":{\"field\":\"xs\"},\"ys\":{\"field\":\"ys\"}},\"id\":\"2316\",\"type\":\"MultiLine\"},{\"attributes\":{},\"id\":\"2294\",\"type\":\"PanTool\"},{\"attributes\":{},\"id\":\"2295\",\"type\":\"WheelZoomTool\"},{\"attributes\":{},\"id\":\"2423\",\"type\":\"UnionRenderers\"},{\"attributes\":{},\"id\":\"2297\",\"type\":\"SaveTool\"},{\"attributes\":{},\"id\":\"2298\",\"type\":\"ResetTool\"},{\"attributes\":{},\"id\":\"2282\",\"type\":\"LinearScale\"},{\"attributes\":{\"source\":{\"id\":\"2308\"}},\"id\":\"2313\",\"type\":\"CDSView\"},{\"attributes\":{},\"id\":\"2280\",\"type\":\"DataRange1d\"},{\"attributes\":{\"overlay\":{\"id\":\"2300\"}},\"id\":\"2296\",\"type\":\"BoxZoomTool\"},{\"attributes\":{\"coordinates\":null,\"data_source\":{\"id\":\"2308\"},\"glyph\":{\"id\":\"2309\"},\"group\":null,\"hover_glyph\":null,\"muted_glyph\":{\"id\":\"2311\"},\"nonselection_glyph\":{\"id\":\"2310\"},\"view\":{\"id\":\"2313\"}},\"id\":\"2312\",\"type\":\"GlyphRenderer\"},{\"attributes\":{},\"id\":\"2424\",\"type\":\"Selection\"},{\"attributes\":{\"axis\":{\"id\":\"2290\"},\"coordinates\":null,\"dimension\":1,\"group\":null,\"ticker\":null},\"id\":\"2293\",\"type\":\"Grid\"},{\"attributes\":{\"coordinates\":null,\"formatter\":{\"id\":\"2421\"},\"group\":null,\"major_label_policy\":{\"id\":\"2422\"},\"ticker\":{\"id\":\"2287\"}},\"id\":\"2286\",\"type\":\"LinearAxis\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.1},\"fill_color\":{\"value\":\"#1b9e77\"},\"hatch_alpha\":{\"value\":0.1},\"hatch_color\":{\"value\":\"#1b9e77\"},\"line_alpha\":{\"value\":0.1},\"line_color\":{\"value\":\"#1b9e77\"},\"size\":{\"value\":10},\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"2310\",\"type\":\"Circle\"},{\"attributes\":{},\"id\":\"2291\",\"type\":\"BasicTicker\"},{\"attributes\":{},\"id\":\"2284\",\"type\":\"LinearScale\"},{\"attributes\":{},\"id\":\"2287\",\"type\":\"BasicTicker\"},{\"attributes\":{\"fill_color\":{\"value\":\"#1b9e77\"},\"hatch_color\":{\"value\":\"#1b9e77\"},\"line_color\":{\"value\":\"#1b9e77\"},\"size\":{\"value\":10},\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"2309\",\"type\":\"Circle\"},{\"attributes\":{},\"id\":\"2299\",\"type\":\"HelpTool\"},{\"attributes\":{\"fill_alpha\":{\"value\":0.2},\"fill_color\":{\"value\":\"#1b9e77\"},\"hatch_alpha\":{\"value\":0.2},\"hatch_color\":{\"value\":\"#1b9e77\"},\"line_alpha\":{\"value\":0.2},\"line_color\":{\"value\":\"#1b9e77\"},\"size\":{\"value\":10},\"x\":{\"field\":\"x\"},\"y\":{\"field\":\"y\"}},\"id\":\"2311\",\"type\":\"Circle\"},{\"attributes\":{\"axis\":{\"id\":\"2286\"},\"coordinates\":null,\"group\":null,\"ticker\":null},\"id\":\"2289\",\"type\":\"Grid\"},{\"attributes\":{},\"id\":\"2425\",\"type\":\"UnionRenderers\"},{\"attributes\":{\"coordinates\":null,\"formatter\":{\"id\":\"2418\"},\"group\":null,\"major_label_policy\":{\"id\":\"2419\"},\"ticker\":{\"id\":\"2291\"}},\"id\":\"2290\",\"type\":\"LinearAxis\"},{\"attributes\":{},\"id\":\"2418\",\"type\":\"BasicTickFormatter\"},{\"attributes\":{},\"id\":\"2278\",\"type\":\"DataRange1d\"},{\"attributes\":{},\"id\":\"2426\",\"type\":\"Selection\"},{\"attributes\":{\"tools\":[{\"id\":\"2294\"},{\"id\":\"2295\"},{\"id\":\"2296\"},{\"id\":\"2297\"},{\"id\":\"2298\"},{\"id\":\"2299\"}]},\"id\":\"2301\",\"type\":\"Toolbar\"},{\"attributes\":{},\"id\":\"2419\",\"type\":\"AllLabels\"}],\"root_ids\":[\"2275\"]},\"title\":\"Bokeh Application\",\"version\":\"2.4.2\"}};\n  const render_items = [{\"docid\":\"b0d689bb-0c84-432a-8b79-3afe19871bc5\",\"root_ids\":[\"2275\"],\"roots\":{\"2275\":\"65361a06-e5a1-4425-8016-c2d0e9f1fedf\"}}];\n  root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n\n  }\n  if (root.Bokeh !== undefined) {\n    embed_document(root);\n  } else {\n    let attempts = 0;\n    const timer = setInterval(function(root) {\n      if (root.Bokeh !== undefined) {\n        clearInterval(timer);\n        embed_document(root);\n      } else {\n        attempts++;\n        if (attempts > 100) {\n          clearInterval(timer);\n          console.log(\"Bokeh: ERROR: Unable to run BokehJS code because BokehJS library is missing\");\n        }\n      }\n    }, 10, root)\n  }\n})(window);",
-      "application/vnd.bokehjs_exec.v0+json": ""
-     },
-     "metadata": {
-      "application/vnd.bokehjs_exec.v0+json": {
-       "id": "2275"
-      }
-     },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_55165_\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"col_heading level0 col0\" >ncos</th>\n",
-       "      <th class=\"col_heading level0 col1\" >energy (Ry)</th>\n",
-       "      <th class=\"col_heading level0 col2\" >variance</th>\n",
-       "      <th class=\"col_heading level0 col3\" >n_it_best_model</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td id=\"T_55165_row0_col0\" class=\"data row0 col0\" >3</td>\n",
-       "      <td id=\"T_55165_row0_col1\" class=\"data row0 col1\" >1.13938355</td>\n",
-       "      <td id=\"T_55165_row0_col2\" class=\"data row0 col2\" >0.00000522</td>\n",
-       "      <td id=\"T_55165_row0_col3\" class=\"data row0 col3\" >110000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_55165_row1_col0\" class=\"data row1 col0\" >4</td>\n",
-       "      <td id=\"T_55165_row1_col1\" class=\"data row1 col1\" >1.13946700</td>\n",
-       "      <td id=\"T_55165_row1_col2\" class=\"data row1 col2\" >0.00002582</td>\n",
-       "      <td id=\"T_55165_row1_col3\" class=\"data row1 col3\" >100000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_55165_row2_col0\" class=\"data row2 col0\" >4</td>\n",
-       "      <td id=\"T_55165_row2_col1\" class=\"data row2 col1\" >1.13946021</td>\n",
-       "      <td id=\"T_55165_row2_col2\" class=\"data row2 col2\" >0.00000629</td>\n",
-       "      <td id=\"T_55165_row2_col3\" class=\"data row2 col3\" >90000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f38ea95efa0>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "Failed to start the Kernel 'jax_cpu (Python 3.8.0)'. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details. spawn /home/energy/amawi/miniconda3/envs/jax_cpu/bin/python EAGAIN"
+     ]
     }
    ],
+   "source": [
+    "# directories and their comparisons\n",
+    "# https://matplotlib.org/stable/api/markers_api.html\n",
+    "from matplotlib.pyplot import cm\n",
+    "\n",
+    "plt.rcParams.update({\n",
+    "            \"text.usetex\": False,\n",
+    "            \"font.family\": \"Times New Roman\"})\n",
+    "\n",
+    "fig, ax = pretty_base(xlabel='Method', ylabel='E (Ry)', latex=False)\n",
+    "\n",
+    "root = '/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/baselines'\n",
+    "dirs = ['baseline', 'jastrow', 'psplit', 'backflow']\n",
+    "xticklabels = ['baseline', 'Jastrow', 'psplit', 'backflow']\n",
+    "\n",
+    "main_data = None\n",
+    "\n",
+    "xs, ys, errs = [], [], []\n",
+    "for i, dir in enumerate(dirs):\n",
+    "    path = os.path.join(root, dir)\n",
+    "    data = get_data(path, dicts=[])\n",
+    "    print('data len: ', len(data))\n",
+    "    xs.append([i for _ in data['energy (Ry)'].values])\n",
+    "    ys.append(data['energy (Ry)'].values)\n",
+    "    errs.append(data['variance'].values)\n",
+    "\n",
+    "    if main_data is None:\n",
+    "        main_data = data\n",
+    "    else:\n",
+    "        main_data = pd.concat([main_data, data], axis=0)\n",
+    "\n",
+    "\n",
+    "xs, ys, errs = np.array(xs), np.array(ys), np.array(errs)\n",
+    "print(xs)\n",
+    "print(ys)\n",
+    "\n",
+    "for j, (x, y, err) in zip(xs, ys, errs):\n",
+    "    ax.errorbar(x, y, yerr=err, color=cm.tab10(j), marker='D')\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "data[['jastrow', 'psplit', 'backflow', 'energy (Ry)', 'variance', 'n_it_best_model']].style.hide_index()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "name = '/home/energy/amawi/projects/nn_ansatz/src/experiments/HEG/el7'\n",
     "x = 'ncos'\n",
